--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
         <!-- About -->
         <div id="about" class="about">
             <h2>About Me</h2>
-            <p>I'm a fourth-year Bachelor of Science student at MacEwan University majoring in computer science.</p>
+            <p>I'm a fourth-year Bachelor of Science student at MacEwan University with a strong interest on
+                software and game development.</p>
             <p>
-                I have experience working across different roles, such as a back-end developer for database management
-                and game development. I also have experience in front-end development for UI/UX design in mobile apps.
+                I enjoy building applications from concept to completion, working across mobile development,
+                backend systems, interactive experiences, and more. I have worked with Kotlin and Firebase for Android
+                apps,
+                Unity and C# for game development, and have hands-on experience designing clean, user friendly
+                interfaces.
             </p>
-            <p> Outside of school and work, I enjoy watching good movies and TV shows, as well as going outside with my
-                friends!</p>
+            <p> I am currently seeking an internship opportunity where I can continue learning, gain
+                hands-on industry experience, and contribute to real-world projects while working alongside
+                experienced developers. Outside of tech, I enjoy watching movies and TV shows and spending
+                time outdoors with friends.</p>
         </div>
 
     </section>
@@ -69,7 +75,8 @@
                     <li>Group project with 4 other people</li>
                 </ul>
                 <div class="project-links">
-                    <a href="https://www.youtube.com/embed/videoseries?list=PL4f02QJUkoJn3e4Gf75VCTMotsBhWXTto">Playlist
+                    <a href="https://www.youtube.com/embed/videoseries?list=PL4f02QJUkoJn3e4Gf75VCTMotsBhWXTto"
+                        target="_blank">Playlist
                         Demo</a>
                 </div>
             </div>
@@ -146,7 +153,7 @@
         <li>Made in SQL</li>
         <li>Group project with 3 other people</li>
         <div class="project-links">
-            <a href="https://github.com/Sisco15/CMPT-291">GitHub Link</a>
+            <a href="https://github.com/Sisco15/CMPT-291" target="_blank">GitHub Link</a>
         </div>
 
         <br><br>
@@ -155,7 +162,7 @@
         <li>Made using Python</li>
         <li>Group project with 3 other people</li>
         <div class="project-links">
-            <a href="https://github.com/zhirep/CMPT361Project">GitHub Link</a>
+            <a href="https://github.com/zhirep/CMPT361Project" target="_blank">GitHub Link</a>
         </div>
     </section>
 
@@ -200,8 +207,9 @@
     <section id="contact" class="section">
         <h2>Contact</h2>
         <p>Email: pelayozhire@gmail.com</p>
-        <p>GitHub: <a href="https://github.com/zhirep">https://github.com/zhirep</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/zhire-pelayo/">https://www.linkedin.com/in/zhire-pelayo/</a>
+        <p>GitHub: <a href="https://github.com/zhirep" target="_blank">https://github.com/zhirep</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/zhire-pelayo/"
+                target="_blank">https://www.linkedin.com/in/zhire-pelayo/</a>
         </p>
     </section>
 
