--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
             It is expected to be finished in April 2026.
         </li><br>
 
+        <h3>Web Design</h3>
+        <li>To design a forestry website project which might include a map and data about potential fire areas or current fire areas
+            for forestry teams to avoid. It is expected to be finished in April 2026.
+        </li><br>
+
         <h3>Everdoom</h3>
         <li>Everdoom is a game developed in Unity. The game is set in a fantasy world, medieval gothic style with magic,
             undead, slimes,
